# duckdb-playground

./: .gitignore  README.md  docker-compose.yaml
docker/duckdb-node/: Dockerfile
docker/duckdb-python/: Dockerfile  README.md  pyproject.toml
docker/duckdb-python/src/: 01-create-users-table.py  02-insert-data-into-users-table.py  03-show-data-in-users-table.py  04-read-csv.py  05-directly-query-from-csv.py  06-show-tables.py  07-create-table-from-csv.py  08-insert-to-table-from-csv.py  09-copy-to-table-from-csv.py  10-export-table-to-csv.py  example.csv  example_headless.csv  hello.py
docs/: running-on-alpine-wsl2.md
